// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button deve adicionar um hint custom automaticamente 1`] = `
<span
  class="hint-wrapper"
>
  <button
    data-loading="false"
    type="button"
  >
    <span>
      Botão
    </span>
  </button>
</span>
`;

exports[`Button deve adicionar um hint string automaticamente 1`] = `
<span
  class="hint-wrapper"
>
  <button
    data-loading="false"
    type="button"
  >
    <span>
      Botão
    </span>
  </button>
</span>
`;

exports[`Button deve renderizar corretamente 1`] = `
<button
  data-loading="false"
  type="button"
>
  <span>
    Botão
  </span>
</button>
`;
